@startuml
    'https://plantuml.com/class-diagram'

    class ImagenBoton{
        + {static} ImagenBoton(String rutaImagen, int alto, int ancho) : ImagenBoton
    }


    class GPS {
        + {static} GPS() : GPS
        + agregarJugador(Jugador j1) : void
        + movermeHacia(Movimiento movimiento) : void
    }

    class MapaLayout{
        - largoEjeX : int
        - largoEjeY : int
        + {static} MapaLayout(Stage window, App app, GPS gps) : MapaLayout
        +crearLineasMatriz(GPS gps, GraphicsContext gc, int largoEjeX, int largoEjeY) : void
        +insertarPoliciasEnGrilla(GPS gps, int largoEjeX, int largoEjeY) : void
        +insertarPozosEnGrilla(GPS gps, int largoEjeX, int largoEjeY): void
        +insertarPiquetesEnGrilla(GPS gps, int largoEjeX, int largoEjeY) : void
        +insertarSorpresasEnGrilla(GPS gps, int largoEjeX, int largoEjeY) : void
        +insertarMetaEnGrilla(GPS gps, int largoEjeX, int largoEjeY) : void
        +insertarVehiculo(GPS gps) : void
    }
    class MapaScene{
    + {static} MapaScene(Stage window, MapaLayout mapaLayout, GPS gps) : MapaScene
    }

    class App {
        -  inicio : InicioView
        - window : Stage
        + void start(Stage stage) : void
    }

    MapaLayout ...> ImagenBoton: utiliza
    MapaLayout ..> GPS: conoce
    MapaLayout ..> App: conoce
    MapaScene ..> GPS: conoce
    MapaScene ..> MapaLayout

@enduml